@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.example.ordersystem {
    namespace entity {
      namespace adapter {
        class com.example.ordersystem.entity.adapter.GoodListAdapter {
            - context : Context
            - mGoodList : List<Good>
            - mInflater : LayoutInflater
            + GoodListAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.ordersystem {
    namespace entity {
      namespace adapter {
        class com.example.ordersystem.entity.adapter.GoodViewHolder {
            + contentView : TextView
            + imageView : ImageView
            + nameView : TextView
            + price : TextView
            - context : Context
            + GoodViewHolder()
            + onClick()
        }
      }
    }
  }
  

  namespace com.example.ordersystem {
    namespace entity {
      namespace adapter {
        class com.example.ordersystem.entity.adapter.PagerAdapter {
            ~ mNumOfTabs : int
            + PagerAdapter()
            + getCount()
            + getItem()
        }
      }
    }
  }
  

  namespace com.example.ordersystem {
    namespace entity {
      namespace adapter {
        class com.example.ordersystem.entity.adapter.ShoppingListAdapter {
            - context : Context
            - mInflater : LayoutInflater
            - mPosition : int
            - mShoppingGoodList : List<ShoppingGood>
            + ShoppingListAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
            + remove()
            + updateCount()
        }
      }
    }
  }
  

  namespace com.example.ordersystem {
    namespace entity {
      namespace adapter {
        class com.example.ordersystem.entity.adapter.ShoppingViewHolder {
            + contentView : TextView
            + editText : EditText
            + imageView : ImageView
            + nameView : TextView
            - context : Context
            + ShoppingViewHolder()
            + onClick()
            + onCreateContextMenu()
        }
      }
    }
  }
  

  com.example.ordersystem.entity.adapter.GoodListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.ordersystem.entity.adapter.GoodListAdapter o-- com.example.ordersystem.goods.Drink : drink
  com.example.ordersystem.entity.adapter.GoodListAdapter o-- com.example.ordersystem.goods.Food : food
  com.example.ordersystem.entity.adapter.GoodListAdapter o-- com.example.ordersystem.goods.TotalPrice : totalPrice
  com.example.ordersystem.entity.adapter.GoodViewHolder .up.|> android.view.View.OnClickListener
  com.example.ordersystem.entity.adapter.GoodViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.ordersystem.entity.adapter.GoodViewHolder o-- com.example.ordersystem.entity.adapter.GoodListAdapter : mAdapter
  com.example.ordersystem.entity.adapter.PagerAdapter -up-|> androidx.fragment.app.FragmentStatePagerAdapter
  com.example.ordersystem.entity.adapter.ShoppingListAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.ordersystem.entity.adapter.ShoppingListAdapter o-- com.example.ordersystem.dao.ShoppingGoodDao : shoppingGoodDao
  com.example.ordersystem.entity.adapter.ShoppingViewHolder .up.|> android.view.View.OnClickListener
  com.example.ordersystem.entity.adapter.ShoppingViewHolder .up.|> android.view.View.OnCreateContextMenuListener
  com.example.ordersystem.entity.adapter.ShoppingViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.ordersystem.entity.adapter.ShoppingViewHolder o-- com.example.ordersystem.entity.adapter.ShoppingListAdapter : mAdapter
  com.example.ordersystem.entity.adapter.ShoppingViewHolder o-- com.example.ordersystem.dao.ShoppingGoodDao : shoppingGoodDao


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
